--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ serde_json = "1.0"
 uuid = { version = "1.0", features = ["v4"] }
 redis = { version = "0.23", features = ["tokio-comp"] }
 dotenv = "0.15"
+async-openai = "0.26.0"
+futures = "0.3"
