--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ redis = { version = "0.23", features = ["tokio-comp"] }
 dotenv = "0.15"
 async-openai = "0.26.0"
 futures = "0.3"
+axum-macros = "0.4.2"
