--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ async-openai = "0.26.0"
 futures = "0.3"
 axum-macros = "0.4.2"
 serde_plain = "1.0.2"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
