--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,25 @@
-version: '3.8'
+version: "3.8"
 
 services:
   app:
     build: .
     ports:
-      - "3000:3000"
-    depends_on:
-      - redis
+      - "${PORT:-3000}:3000"
     environment:
       - REDIS_URL=redis://redis:6379
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - API_KEYS=${API_KEYS}
+      - MENU_FILE=/app/static/menu.json
+      - HOST=0.0.0.0
+      - PORT=3000
+      - OPENAI_MODEL=gpt-4o
+      - RUST_LOG=info
+    volumes:
+      - ./static:/app/static
+    depends_on:
+      - redis
 
   redis:
     image: redis:7
     ports:
       - "6379:6379"
-    volumes:
-      - redis_data:/data
-
-volumes:
-  redis_data:
