--- a/env.sample
+++ b/env.sample
@@ -1,4 +1,8 @@
-REDIS_URL=redis://127.0.0.1:6379
+REDIS_URL=redis://localhost:6379
+OPENAI_API_KEY=your-api-key-here
+API_KEYS=key1,key2,key3
 MENU_FILE=static/menu.json
-OPENAI_API_KEY=
-API_KEYS=
+HOST=127.0.0.1
+PORT=3000
+OPENAI_MODEL=gpt-4o
+RUST_LOG=info
